# industrial-cv-ai

./: .emscripten-env  .gitignore  CLAUDE.md  CMakeLists.txt  PHASE-2-PLAN.md  README.md  build-wasm.sh  index.html  industrial-cv-business-desc.md  industrial-cv-poc-plan.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx
src/camera/: capture.ts
src/cpp/: frame_processor.cpp  frame_processor.h  main.cpp  webgpu_utils.cpp  webgpu_utils.h
src/webgpu/: detector.ts
